// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService  login  get user, exists 1`] = `
Object {
  "additional": Object {},
  "email": "zin@fa.am",
  "firstName": "Seth Tran",
  "id": 1,
  "imageUrl": "",
}
`;

exports[`AuthService  login  validate user, exists 1`] = `
Object {
  "additional": Object {},
  "email": "zin@fa.am",
  "firstName": "Seth Tran",
  "id": 1,
  "imageUrl": "",
}
`;

exports[`AuthService  refresh token fail, no such token 1`] = `"Invalid refresh token"`;

exports[`AuthService  register User  failed, user already exists 1`] = `"Such email is busy"`;

exports[`AuthService  register User  user created 1`] = `
Object {
  "additional": Object {},
  "email": "zin@fa.am",
  "firstName": "Seth Tran",
  "id": 1,
  "imageUrl": "",
  "password": "kodtacwuwb",
}
`;

exports[`AuthService  register User  user-categories created 1`] = `
Object {
  "additional": Object {},
  "email": "zin@fa.am",
  "firstName": "Seth Tran",
  "id": 1,
  "imageUrl": "",
  "password": "kodtacwuwb",
}
`;

exports[`AuthService  register User  user-categories not created (test user with exists, predefined categories) 1`] = `
Object {
  "additional": Object {},
  "email": "zin@fa.am",
  "firstName": "Seth Tran",
  "id": 1,
  "imageUrl": "",
  "password": "kodtacwuwb",
}
`;
